Locate Me Support

--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
             <header data-role="header" data-theme="b">
                 <a href="#" data-role="button" id="bckbtn" class="ui-btn ui-icon-back ui-btn-icon-left" data-rel="back" >Back</a>
                 <h1>Map View</h1>
-                <a href="#" data-role="button" id="lctme">Locate Me</a>
+                <a href="#" data-role="button" id="lctme" class="ui-btn ui-icon-location ui-btn-icon-left">Locate Me</a>
                 
             </header>
             <article data-role="content" class="ui-content">
