--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,8 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
         
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <!--<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />-->
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1,width=device-width" />
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css" />
         <link rel="stylesheet" type="text/css" href="css/geomapper.css" />
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
@@ -53,9 +54,10 @@
             <article data-role="content" class="ui-content">
                 <div id="map-canvas" style="width:100%"></div>
             </article>
-            <footer data-role="footer" data-theme="b" data-position="fixed">
+           <!-- <footer data-role="footer" data-theme="b" data-position="fixed">
                  <h1>&copy All Rights Reserved</h1>                 
             </footer>
+            -->
         </section>
         <script type="text/javascript" src="cordova.js"></script>        
     </body>
