--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
         </section>
         <section data-role="page" id="listpage">
             <header data-role="header" data-theme="b" data-position="fixed" >
+                <a href="#" data-role="button" data-icon="back" data-iconpos="notext" data-rel="back">Back</a>
                 <h1>CountryList</h1>
             </header>
             <article data-role="main"> 
